# Matux

./: .dockerignore  .editorconfig  .env.production.example  .env.vercel.example  .env.vircadia  .env.vircadia.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .rhtpa.yml  .sassdocrc  .stylelintrc.js  Dockerfile  Jenkinsfile  LICENSE  README.md  analyze-batch.py  analyze-easy.py  analyze-eslint.ps1  analyze-file.py  analyze-top.py  analyze-unsafe.py  angular.json  daemon.json  docker-compose.override.yml  docker-compose.vircadia.yml  docker-compose.yml  eslint-easy-errors.txt  eslint-errors.txt  eslint-report-raw.json  eslint-report.json  eslint-report2.json  eslint_full_output.txt  ngsw-config.json  package-lock.json  package-simple.json  package.json  (+14 more)
.codebuddy/: analysis-summary.json
.cursor/: README.md  advanced-settings.json  ai-config.json  extensions.json  settings.json
.dart_tool/: package_config.json  package_graph.json
.github/: dependabot.yml
.husky/: _config.json  pre-commit  pre-push
.qoder/: MCP-GUIDE.md  QUICK-REFERENCE.md  mcp-config.json  mcp-test-tool.py
backend/: .env.example  README.md  celery_app.py  check_test_user.py  create_test_accounts.py  create_test_admin.py  import_test.py  legacy_routes.py  main.py  main_ai_edu.py  requirements.txt  run.py
blockchain/: API_REFERENCE_MANUAL.md  FABRIC_DEVELOPER_DOCUMENTATION.md  TECHNICAL_ARCHITECTURE_DIAGRAMS.md
config/: sonar-quality-config.json
docker/: .env.example  Dockerfile.3d-model-python  Dockerfile.cloud  MONITORING_SETUP.md  README.md  alertmanager.yml  docker-compose.3d-model.dev.yml  docker-compose.blog.yml  docker-compose.cloud.yml  docker-compose.openhydra.yml  docker-compose.sonarqube.yml  docker-compose.test.yml  docker-compose.vircadia.yml  nginx-proxy.conf  nginx.conf  prometheus-rules.yml  prometheus.yml  supervisord.conf
docs/: 3D_MODEL_LIBRARY_DEVELOPER_GUIDE.md  ADMIN_CONFIGURATION_MANUAL.md  ADMIN_SIDEBAR_GUIDE.md  ADMIN_VS_MANAGEMENT_GUIDE.md  AI_MODEL_HOT_UPDATE_ARCHITECTURE.md  BACKEND_P1_003_GRADE_MULTIPLIER_IMPLEMENTATION.md  CELERY_CIRCUIT_BREAKER_IMPLEMENTATION.md  CSS_PROPERTY_ORDER_OPTIMIZATION.md  DYNAMIC_COURSE_GENERATION_ARCHITECTURE.md  EDGE_IMPULSE_250KB_DEVELOPMENT_SPEC.md  EDUCATION_SYSTEM_DEVELOPMENT_GUIDE.md  FLUTTER_WEBSOCKET_IMPLEMENTATION.md  FRONTEND_INTEGRATION_README.md  GLOBAL_TECHNICAL_ARCHITECTURE.md  GLOBAL_TECHNICAL_ARCHITECTURE_UPDATE_2026-03-22.md  HARDWARE_COMMUNICATION_COMPLETE.md  INDEX.md  INSTITUTION_MODULE_MIGRATION.md  IPC_DUPLICATE_REGISTRATION_FIX.md  KICAD_MODEL_SELECTION_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.md  MODULAR_LAZY_LOADING_ARCHITECTURE.md  MODULAR_LAZY_LOADING_DEVELOPMENT_PLAN.md  MXP_FORMAT_SPEC.md  MatuX_Desktop_PRD.md  MatuX_Desktop_最终需求文档.md  MatuX_桌面端学习端代码结构审查与完善报告.md  OPENHYDRA_XEDU_INTEGRATION_PLAN.md  PHASE5_COMPLETION_REPORT.md  PHASE5_INTEGRATION_SUMMARY.md  PHASE5_TESTING_GUIDE.md  PHASE5_TEST_STATUS.md  PHASE5_UI_COMPONENTS_SUMMARY.md  PHASE5_VERIFICATION_REPORT.md  PLUGIN_ARCHITECTURE_COMPLETE_GUIDE.md  PLUGIN_PHASE2_IMPLEMENTATION_SUMMARY.md  PLUGIN_PHASE5_IMPLEMENTATION_SUMMARY.md  PORT_8000_FIX_REPORT.md  PROJECT_REQUIREMENTS.md  PROJECT_ROADMAP.md  (+16 more)
documentation/: .redirect-map.json  README.md
edu-proto/: package-lock.json  package.json
electron/: .gitignore  README.md  device-profiler.js  electron-builder.yml  install-config.js  main.js  package-lock.json  package.json  phased-startup.js  plugin-downloader.js  plugin-installer.js  plugin-recommender.js  plugin-registry.js  plugin-store-enhancer.js  preload-splash.js  preload.js  refactor-v4.js  security.js  splash.html  test-device-profiler.js  verify_build_config.js  verify_setup.js
flutter_app/: .flutter-plugins-dependencies  README.md  pubspec.yaml  websocket_implementation_validation_20260301_151339.json
hardware/: __init__.py  demo_hardware_acceleration.py
hardware_training_data/: hardware_operations_dataset.csv  raw_hardware_data.json
integration_test_results/: final_integration_test_report_20260531_142529.json  final_integration_test_report_20260531_151158.json
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
nginx/: nginx.conf
(+1302 files in other folders)
